Versión final con jugadores, marcador y sin estilos

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "tres-en-raya",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "daw-3-en-raya",
+  "version": "1.0.0",
+  "description": "Repositorio del ejercicio de 3 en raya hecho en vanilla js sin estilos",
+  "main": "main.js",
+  "directories": {
+    "doc": "docs"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,5 +17,15 @@
   "dependencies": {
     "sass": "^1.70.0",
     "toastify-js": "^1.12.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bienvenidosaez/daw-3-en-raya.git"
+  },
+  "author": "@bienvenidosaez",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bienvenidosaez/daw-3-en-raya/issues"
+  },
+  "homepage": "https://github.com/bienvenidosaez/daw-3-en-raya#readme"
 }
