--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.8"
+    "vite": "^5.1.4"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "sass": "^1.70.0",
     "toastify-js": "^1.12.0"
   },
